# orshin-demo

./: .gitmodules  BB_BRINGUP.md  BOM.md  LICENSE.md  LICENSE_BB  ORSHIN_SC_BRINGUP.md  README.md  TROPIC01_BRINGUP.md  WIRING.md
adf/: README.md
examples/BB-Communication_Example/: CMakeLists.txt  README.md  central.c  example.md  peripheral.c
examples/BB-TP01_Integration/: README.md  SIMPLE_EXAMPLE.md  central.c  peripheral.c
examples/BB-Tetris_TP01/: CMakeLists.txt  README.md  central.c  tests.c
examples/Tetris_TP01/: README.md  bb-lib  central.c  peripheral.c  tropic_simple.h
examples/Tetris_TP01_COREV/: Makefile  README.md  TROUBLESHOOTING.md  central.c  ex_se05x_crypto  peripheral.c
orshin-sc/: install.sh
orshin-sc/orshin-rpi-loader/: cli_test.srec  openocd-nexys-hs2.cfg  rpi_riscv_loader.service  rpi_riscv_loader.sh
threat_model/: README.md
